[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "Solana Program Library Token Lending"
edition = "2021"
license = "Apache-2.0"
name = "spl-token-lending"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.2.0"

[features]
no-entrypoint = []
test-sbf = []
default = ["no-entrypoint", "test-sbf"]

[dependencies]
bytemuck = "1.21.0"
solana-program = "2.1.0"
spl-token = {version = "7.0.0", features = ["no-entrypoint"]}
thiserror = "2.0"
num-derive = "0.4"
num-traits = "0.2"
arrayref = "0.3.9"
uint = "0.10"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.6"
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
anyhow = "1.0"
[lib]
crate-type = ["cdylib", "lib"]

