[package]
description = "Token Lending Program"
edition = "2021"
license = "Apache-2.0"
name = "spl-token-lending"
version = "0.2.0"

[features]
default = ["no-entrypoint"]
devnet = []
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.9"
bytemuck = "1.21.0"
num-derive = "0.4"
num-traits = "0.2"
solana-program = "2.1.0"
spl-token = {version = "7.0.0", features = ["no-entrypoint"]}
thiserror = "2.0"
uint = "0.10"
[dev-dependencies]
anyhow = "1.0"
assert_matches = "1.5.0"
proptest = "1.6"
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
[lib]
crate-type = ["cdylib", "lib"]
